--- a/teaching/300/300notes/0-2.html
+++ b/teaching/300/300notes/0-2.html
@@ -85,7 +85,7 @@
   <!-- Blank space for students to write -->
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S0.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_theorem">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#006600;">  Theorem </span>0.2.3.</h6>
@@ -96,7 +96,7 @@
   <!-- Blank space for students to write -->
   <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S0.SS2.SSS1.p5" class="ltx_para ltx_noindent">
 <p class="ltx_p">Notice that to prove these two theorems we had to start general. In Section 0-1 we saw that “proofs by example” don’t hold up to the standard of mathematical rigor. We need to make an argument that holds for all examples we could consider. Hence for our previous theorem, our “two consecutive integers” weren’t just two numbers we chose like “6” and “7”; they were <math id="S0.SS2.SSS1.p5.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> and <math id="S0.SS2.SSS1.p5.m2" class="ltx_Math" alttext="n+1" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></math> for some integer <math id="S0.SS2.SSS1.p5.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. We could have also chosen <math id="S0.SS2.SSS1.p5.m4" class="ltx_Math" alttext="n-1" display="inline"><mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></math> and <math id="S0.SS2.SSS1.p5.m5" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> as our two consecutive integers, or even <math id="S0.SS2.SSS1.p5.m6" class="ltx_Math" alttext="n+2" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>2</mn></mrow></math> and <math id="S0.SS2.SSS1.p5.m7" class="ltx_Math" alttext="n+3" display="inline"><mrow><mi>n</mi><mo>+</mo><mn>3</mn></mrow></math>, as these descriptions fit the general description of any two consecutive integers.</p>
 </div>
@@ -117,7 +117,7 @@
 </div>
 <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 </section>
 <section id="S0.SS2.SSS2" class="ltx_subsubsection">
 <h3 class="ltx_title ltx_title_subsubsection">
@@ -143,7 +143,7 @@
 </div>
 <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S0.SS2.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h6 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>0.2.7.</h6>
@@ -165,7 +165,7 @@
 </div>
 <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S0.SS2.SSS2.p4" class="ltx_para ltx_noindent">
 <p class="ltx_p">The mini-statements “<math id="S0.SS2.SSS2.p4.m1" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>” and “<math id="S0.SS2.SSS2.p4.m3" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m4" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math>” are called <span class="ltx_text ltx_font_bold">predicates</span> in logic. Let’s call “<math id="S0.SS2.SSS2.p4.m5" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m6" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>” Predicate 1 and “<math id="S0.SS2.SSS2.p4.m7" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> divides <math id="S0.SS2.SSS2.p4.m8" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math>” Predicate 2. Then both statemenets written above are written in the form “If [Statement x], then [Statement y].” These are called <span class="ltx_text ltx_font_bold">conditional propositions</span>. What’s more, the second statement is the <span class="ltx_text ltx_font_bold">converse</span> of the first, as it flips the order of the two predicates.</p>
 </div>
@@ -184,7 +184,7 @@
 <div id="S0.SS2.SSS2.p6" class="ltx_para ltx_noindent">
 <p class="ltx_p">Notice that this is the converse of Theorem 0.2.6. Even though Theorem 0.2.6 is not written using the exact “If… then…” English terms, it can be rewritten into that form using a rephrasing: “If you have the sum of three consecutive integers, then that integer is divisible by three.”</p>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S0.SS2.SSS2.p7" class="ltx_para">
 <p class="ltx_p">For this next problem, we will need to use the following fact: “Every integer is either odd or even," which we will assume without proof for now. (The proof uses complete induction, which we will cover in Section 3.2.) In the problem below: since <math id="S0.SS2.SSS2.p7.m1" class="ltx_Math" alttext="n=2k+1" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><mn>2</mn><mo>⁢</mo><mi>k</mi></mrow><mo>+</mo><mn>1</mn></mrow></mrow></math> for some integer <math id="S0.SS2.SSS2.p7.m2" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math> by definition of odd, see if you can apply the fact above to the integer <math id="S0.SS2.SSS2.p7.m3" class="ltx_Math" alttext="k" display="inline"><mi>k</mi></math>.</p>
 </div>
