--- a/teaching/300/300notes/1-1.html
+++ b/teaching/300/300notes/1-1.html
@@ -153,7 +153,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.1.3.</h3>
 <div id="S1.SS1.Thmtheorem3.p1" class="ltx_para">
-<p class="ltx_p">Let <math id="S1.SS1.Thmtheorem3.p1.m1" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> be the statement “It is raining outside” and <math id="S1.SS1.Thmtheorem3.p1.m2" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> be the statement “The ground outside is wet”. Which of the following is true at the time you are reading this?</p>
+<p class="ltx_p">Let <math id="S1.SS1.Thmtheorem3.p1.m1" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math> be the statement “It is raining outside” and <math id="S1.SS1.Thmtheorem3.p1.m2" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> be the statement “The ground outside is wet”. Write each logical statement below in English. Mark which of these statements are true or false at the time you are reading this.</p>
   
 <ol id="S1.I3" class="ltx_enumerate">
 <li id="S1.I3.i1" class="ltx_item" style="list-style-type:none;">
@@ -207,7 +207,6 @@
 </ol>
 </div>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 </section>
 <section id="S1.SS1.SSS2" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
@@ -239,6 +238,15 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.1.4.</h3>
 <div id="S1.SS1.Thmtheorem4.p1" class="ltx_para ltx_noindent">
+<p class="ltx_p">Write out a truth table for the statements <math id="S1.I2.ix2.I2.i1.p1.m1" class="ltx_Math" alttext="A\wedge B" display="inline"><mrow><mi>A</mi><mo>∧</mo><mi>B</mi></mrow></math> and <math id="S1.I2.ix3.I3.i1.p1.m1" class="ltx_Math" alttext="A\vee B" display="inline"><mrow><mi>A</mi><mo>∨</mo><mi>B</mi></mrow></math>.</p>
+</div>
+  <div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
+<div id="S1.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
+<h3 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#800000;">  Example </span>1.1.4.</h3>
+<div id="S1.SS1.Thmtheorem4.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">A coach promises her players, “If we win tonight, then I will buy you pizza tomorrow.” Determine the cases in which the players can rightly claim to have been lied to.</p>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
@@ -249,7 +257,6 @@
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S1.SS1.SSS2.p4" class="ltx_para">
 <p class="ltx_p">Notice that the only this statement can be proven false is if we find a case where <math id="S1.SS1.SSS2.p4.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true but <math id="S1.SS1.SSS2.p4.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false. This motivates the following result:</p>
 </div>
@@ -263,6 +270,16 @@
 <div id="S1.SS1.SSS2.p5" class="ltx_para ltx_noindent">
 <p class="ltx_p">Given this, we can now formulate truth tables for more complicated statements like the one from the previous page:</p>
 </div>
+  <div id="S1.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
+<h3 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#800000;">  Example </span>1.1.4.</h3>
+<div id="S1.SS1.Thmtheorem4.p1" class="ltx_para ltx_noindent">
+<p class="ltx_p">Write a truth table for the statement <math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇒</mo><mi>R</mi></mrow><mo lspace="0em">.</mo></mrow></math>.</p>
+</div>
+  <div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
+<!--
 <div id="S1.SS1.SSS2.p6" class="ltx_para">
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
@@ -334,6 +351,7 @@
 </tbody>
 </table>
 </div>
+  -->
 <div id="S1.SS1.SSS2.p7" class="ltx_para">
 <p class="ltx_p">Let’s keep investigating the conditional statement <math id="S1.SS1.SSS2.p7.m1" class="ltx_Math" alttext="P\Rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">⇒</mo><mi>Q</mi></mrow></math>.</p>
 </div>
@@ -348,7 +366,7 @@
 <p class="ltx_p ltx_align_center"><span class="ltx_text ltx_framed ltx_framed_rectangle" style="font-size:173%;--ltx-border-color:#000000;">T</span>    <span class="ltx_text ltx_framed ltx_framed_rectangle" style="font-size:173%;--ltx-border-color:#000000;">8</span>    <span class="ltx_text ltx_framed ltx_framed_rectangle" style="font-size:173%;--ltx-border-color:#000000;">3</span>    <span class="ltx_text ltx_framed ltx_framed_rectangle" style="font-size:173%;--ltx-border-color:#000000;">A</span></p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S1.SS1.SSS2.p8" class="ltx_para">
 <p class="ltx_p">This seems to motivate the following definition:</p>
@@ -360,7 +378,6 @@
 <p class="ltx_p">Given a conditional statement <math id="S1.SS1.Thmtheorem7.p1.m1" class="ltx_Math" alttext="P\Rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">⇒</mo><mi>Q</mi></mrow></math>, the <span class="ltx_text ltx_font_bold">contrapositive</span> of this statement is <math id="S1.SS1.Thmtheorem7.p1.m2" class="ltx_Math" alttext="\neg Q\Rightarrow\neg P" display="inline"><mrow><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow><mo stretchy="false">⇒</mo><mrow><mo rspace="0.167em">¬</mo><mi>P</mi></mrow></mrow></math>.</p>
 </div>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S1.SS1.Thmtheorem8" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.1.8.</h3>
@@ -368,7 +385,7 @@
 <p class="ltx_p">Form the contrapositive of the statement “If we win tonight, then I will buy you pizza tomorrow.” If this original statement is true, is the contrapositive of the statement true? How does this connect with our previous example?</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S1.SS1.SSS2.p9" class="ltx_para">
 <p class="ltx_p">Now to prove the following theorem requires a truth table. However, now we are convinced that this theorem might be true:</p>
@@ -387,7 +404,7 @@
 <p class="ltx_p">Prove the theorem above by building a truth table.</p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S1.SS1.SSS2.p10" class="ltx_para">
 <p class="ltx_p">There are two other ways to rework the statement “<math id="S1.SS1.SSS2.p10.m1" class="ltx_Math" alttext="P\Rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">⇒</mo><mi>Q</mi></mrow></math>”, but neither of them are logically equivalent to this original statement.</p>
@@ -406,9 +423,8 @@
 <p class="ltx_p">Provide an example of a true conditional proposition whose converse is false. Then provide an example of a true conditional proposition whose inverse is false. <span class="ltx_text ltx_font_italic">Could you use the same example for both?</span></p>
 </div>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 </section>
 </section>
 </section>
