--- a/teaching/300/300notes/1-2.html
+++ b/teaching/300/300notes/1-2.html
@@ -38,7 +38,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.2.1.</h3>
 <div id="S1.SS2.Thmtheorem1.p1" class="ltx_para">
-<p class="ltx_p">Reword the following so that it reads explicitly as a conditional proposition: “The sum of any three consecutive integers is always divisible by three.”</p>
+<p class="ltx_p">Reword the following so that it reads explicitly as a conditional proposition of the form "If <span style="display: inline-block; border-bottom: 1px solid black; width: 1cm"></span>, then <span style="display: inline-block; border-bottom: 1px solid black; width: 1cm"></span>": “The sum of any three consecutive integers is always divisible by three.”</p>
 </div>
 </div>
 <div class="answer-space" aria-hidden="true"></div>
@@ -50,7 +50,7 @@
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">A Skeleton Version of a Direct Proof for <math id="S1.SS2.p3.m1" class="ltx_Math" alttext="A\Rightarrow B" display="inline"><mrow><mi>A</mi><mo stretchy="false">⇒</mo><mi>B</mi></mrow></math>.</span></p>
 </div>
 <div id="S1.SS2.p4" class="ltx_para ltx_noindent">
-<table class="ltx_tabular ltx_guessed_headers ltx_align_middle">
+<table style="align: center" class="ltx_tabular ltx_guessed_headers ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t"><span class="ltx_text ltx_font_bold">Guidelines</span></th>
@@ -59,38 +59,38 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">Assume <math id="S1.SS2.p4.m1" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math>.</th>
 <td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">
-<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
+<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:200pt;">
 <span class="ltx_p">Assume <math id="S1.SS2.p4.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>, <math id="S1.SS2.p4.m3" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math>, and <math id="S1.SS2.p4.m4" class="ltx_Math" alttext="\ell" display="inline"><mi mathvariant="normal">ℓ</mi></math> are three consecutive integers.</span>
 </span>
 </td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">
-<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
+<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:200pt;">
 <span class="ltx_p">Use definitions to rewrite <math id="S1.SS2.p4.m5" class="ltx_Math" alttext="A" display="inline"><mi>A</mi></math>. (There is sometimes more than one way to do this.)</span>
 </span>
 </th>
 <td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">
-<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
+<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:200pt;">
 <span class="ltx_p"><span class="ltx_text ltx_font_bold">Without loss of generality</span> (WLOG) assume <math id="S1.SS2.p4.m6" class="ltx_Math" alttext="n&lt;m&lt;\ell" display="inline"><mrow><mi>n</mi><mo>&lt;</mo><mi>m</mi><mo>&lt;</mo><mi mathvariant="normal">ℓ</mi></mrow></math>. Then <math id="S1.SS2.p4.m7" class="ltx_Math" alttext="m=n+1" display="inline"><mrow><mi>m</mi><mo>=</mo><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></mrow></math> and <math id="S1.SS2.p4.m8" class="ltx_Math" alttext="\ell=n+2" display="inline"><mrow><mi mathvariant="normal">ℓ</mi><mo>=</mo><mrow><mi>n</mi><mo>+</mo><mn>2</mn></mrow></mrow></math>.</span>
 </span>
 </td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">
-<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
+<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:200pt;">
 <span class="ltx_p">(Recommended) State what you wish to show in <math id="S1.SS2.p4.m9" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math> given what you’ve done so far.</span>
 </span>
 </th>
 <td class="ltx_td ltx_align_center ltx_border_r ltx_border_t">
-<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
+<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:200pt;">
 <span class="ltx_p">We want to show that <math id="S1.SS2.p4.m10" class="ltx_Math" alttext="n+m+\ell" display="inline"><mrow><mi>n</mi><mo>+</mo><mi>m</mi><mo>+</mo><mi mathvariant="normal">ℓ</mi></mrow></math>, or <math id="S1.SS2.p4.m11" class="ltx_Math" alttext="n+(n+1)+(n+2)" display="inline"><mrow><mi>n</mi><mo>+</mo><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><mo stretchy="false">)</mo></mrow><mo>+</mo><mrow><mo stretchy="false">(</mo><mrow><mi>n</mi><mo>+</mo><mn>2</mn></mrow><mo stretchy="false">)</mo></mrow></mrow></math>, is divisible by 3.</span>
 </span>
 </td>
 </tr>
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">
-<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
+<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:200pt;">
 <span class="ltx_p">Connect what you have to the definitions used in <math id="S1.SS2.p4.m12" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math>.</span>
 </span>
 </th>
@@ -99,7 +99,7 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_center ltx_th ltx_th_row ltx_border_b ltx_border_l ltx_border_r ltx_border_t">Conclude <math id="S1.SS2.p4.m13" class="ltx_Math" alttext="B" display="inline"><mi>B</mi></math>.</th>
 <td class="ltx_td ltx_align_center ltx_border_b ltx_border_r ltx_border_t">
-<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:169.1pt;">
+<span class="ltx_inline-block ltx_minipage ltx_align_middle" style="width:200pt;">
 <span class="ltx_p">Then <math id="S1.SS2.p4.m14" class="ltx_Math" alttext="n+m+\ell" display="inline"><mrow><mi>n</mi><mo>+</mo><mi>m</mi><mo>+</mo><mi mathvariant="normal">ℓ</mi></mrow></math> is divisible by 3 by definition. This concludes the proof.</span>
 </span>
 </td>
@@ -107,7 +107,7 @@
 </tbody>
 </table>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S1.SS2.Thmtheorem2" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.2.2.</h3>
@@ -142,7 +142,10 @@
 </div>
 <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
+<p class="ltx_p">(More space for Example 1.2.3.)</p>
+<div class="answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S1.SS2.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.2.4.</h3>
@@ -151,8 +154,9 @@
 three sides of a right triangle, then <math id="S1.SS2.Thmtheorem4.p1.m5" class="ltx_Math" alttext="m=3" display="inline"><mrow><mi>m</mi><mo>=</mo><mn>3</mn></mrow></math>.</p>
 </div>
 </div>
-<div class="large-answer-space" aria-hidden="true"></div>
+<div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div><header></header>
 <div id="S1.SS2.Thmtheorem5" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>1.2.5.</h3>
@@ -160,7 +164,7 @@ three sides of a right triangle, then <math id="S1.SS2.Thmtheorem4.p1.m5" class=
 <p class="ltx_p"><span class="ltx_text ltx_font_italic">Disprove</span> the following conjecture: “If <math id="S1.SS2.Thmtheorem5.p1.m1" class="ltx_Math" alttext="5" display="inline"><mn>5</mn></math> divides <math id="S1.SS2.Thmtheorem5.p1.m2" class="ltx_Math" alttext="n^{2}-1" display="inline"><mrow><msup><mi>n</mi><mn>2</mn></msup><mo>−</mo><mn>1</mn></mrow></math>, then 5 divides <math id="S1.SS2.Thmtheorem5.p1.m3" class="ltx_Math" alttext="n-1" display="inline"><mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></math>.”</p>
 </div>
 </div>
-<div class="answer-space" aria-hidden="true"></div>
+<div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </section>
 </article>
