--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -75,16 +75,16 @@
 <div id="S2.SS1.Thmtheorem2.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Compare each bulleted statement with its contrapositive statement. Which do you think would be easier to prove? Try writing the first few lines of a proof for each statement to determine.</p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS1.SSS1.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Typically it is easier to move from <span class="ltx_text ltx_font_italic">less complex statements</span> to <span class="ltx_text ltx_font_italic">more complex statements</span> when given the choice. In each of the bulleted statements above, the antecedent can be thought of as hiding crucial information. For example, in the first bullet, how would we show that taking a “square root” of <math id="S2.SS1.SSS1.p1.m1" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> retains that <math id="S2.SS1.SSS1.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even for integers <math id="S2.SS1.SSS1.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>? For the second bullet, if <math id="S2.SS1.SSS1.p1.m4" class="ltx_Math" alttext="nm" display="inline"><mrow><mi>n</mi><mo>⁢</mo><mi>m</mi></mrow></math> is even, what steps would we take to “divide by” <math id="S2.SS1.SSS1.p1.m5" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> and show that <math id="S2.SS1.SSS1.p1.m6" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even?</p>
 </div>
 <div id="S2.SS1.SSS1.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">These mathematical operations seem a bit trickier to manage than the ones used in the contrapositive statements.</p>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS1.Thmtheorem3" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.3.</h3>
@@ -94,6 +94,7 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
+<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into <b>DeMorgan's Law</b>:<math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>V</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mrow><mo rspace="0.167em">¬</mo><mi>P</mi><mo>∧</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow><mo lspace="0em">.</mo></mrow></math></p>
 <div id="S2.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.4.</h3>
