--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -94,7 +94,7 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
-<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into <b>DeMorgan's Law</b>:<math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>V</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mrow><mo rspace="0.167em">¬</mo><mi>P</mi><mo>∧</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow><mo lspace="0em">.</mo></mrow></math></p>
+<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into <b>DeMorgan's Law</b>:<math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi></mrow><mo>∨</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mrow><mo rspace="0.167em">¬</mo><mi>P</mi><mo>∧</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow>.</mo></mrow></math></p>
 <div id="S2.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.4.</h3>
