--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -94,10 +94,19 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
-<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into <b>DeMorgan's Law</b>:<math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi></mrow><mo>∨</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mrow><mo rspace="0.167em">¬</mo><mi>P</mi><mo>∧</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow>.</mo></mrow></math></p>
+<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into one of <b>DeMorgan's Laws (I)</b>: <math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi></mrow><mo>∨</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mo rspace="0.167em">¬</mo><mi>P</mi><mo>∧</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow>.</mo></mrow></math></p>
+<p class="ltx_p">In heuristic language, this means that distributing a negation through a compound statement results in flipping any logical connectors like ∨ or ∧.
 <div id="S2.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.4.</h3>
+<div id="S2.SS1.Thmtheorem4.p1" class="ltx_para">
+<p class="ltx_p">Write a truth table proving <b>DeMorgan's Laws (II)</b>:<math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi></mrow><mo>∧</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mo rspace="0.167em">¬</mo><mi>P</mi><mo>∨</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow>.</mo></mrow></math></p>
+</div>
+  <div class="half-answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
+<h3 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#800000;">  Example </span>2.1.5.</h3>
 <div id="S2.SS1.Thmtheorem4.p1" class="ltx_para">
 <p class="ltx_p">Using the contrapositive statement you wrote in the previous example, prove the following statement: “if <math id="S2.SS1.Thmtheorem4.p1.m1" class="ltx_Math" alttext="n,m\in\mathbb{Z}" display="inline"><mrow><mrow><mi>n</mi><mo>,</mo><mi>m</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow></math> such that <math id="S2.SS1.Thmtheorem4.p1.m2" class="ltx_Math" alttext="nm" display="inline"><mrow><mi>n</mi><mo>⁢</mo><mi>m</mi></mrow></math> is even, then <math id="S2.SS1.Thmtheorem4.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even or <math id="S2.SS1.Thmtheorem4.p1.m4" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> is even.”</p>
 </div>
@@ -121,7 +130,7 @@
 <p class="ltx_p">The connecting phrase “if and only if” (sometimes abbreviated iff) can be unpacked the following way: “if either of the two statements on either side of me is true, then the statement on the other side is also true. What’s more, if either of the two statements on either side of me is false, then the statement on the other side is also false.”</p>
 </div>
 <div id="S2.SS1.SSS2.p3" class="ltx_para ltx_noindent">
-<p class="ltx_p">This last statement is quite interesting, as it says that we could have very well rephrased this statement in the following way:</p>
+<p class="ltx_p">This last statement is quite interesting, as it says that we could have very well replaced "even" with "odd" in the statement and have a logically equivalent statement (verify!):</p>
 <blockquote class="ltx_quote">
 <p class="ltx_p">The integer <math id="S2.SS1.SSS2.p3.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is odd if and only if <math id="S2.SS1.SSS2.p3.m2" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is odd.</p>
 </blockquote>
@@ -130,7 +139,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.5.</h3>
 <div id="S2.SS1.Thmtheorem5.p1" class="ltx_para">
-<p class="ltx_p">Let <math id="S2.SS1.Thmtheorem5.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> be the statement “<math id="S2.SS1.Thmtheorem5.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even” and let <math id="S2.SS1.Thmtheorem5.p1.m3" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> be the statement “<math id="S2.SS1.Thmtheorem5.p1.m4" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is even”. Using a truth table, prove that <math id="S2.SS1.Thmtheorem5.p1.m5" class="ltx_Math" alttext="P\iff Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">⇔</mo><mi>Q</mi></mrow></math> is logically equivalent to the statement <math id="S2.SS1.Thmtheorem5.p1.m6" class="ltx_Math" alttext="\neg P\iff\neg Q" display="inline"><mrow><mrow><mo rspace="0.167em">¬</mo><mi>P</mi></mrow><mo stretchy="false">⇔</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></math>. Then explain why the two quotes above both have the same logical meaning.</p>
+<p class="ltx_p">Let <math id="S2.SS1.Thmtheorem5.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> be the statement “<math id="S2.SS1.Thmtheorem5.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> is even” and let <math id="S2.SS1.Thmtheorem5.p1.m3" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> be the statement “<math id="S2.SS1.Thmtheorem5.p1.m4" class="ltx_Math" alttext="n^{2}" display="inline"><msup><mi>n</mi><mn>2</mn></msup></math> is even”. Using a truth table, prove that <math id="S2.SS1.Thmtheorem5.p1.m5" class="ltx_Math" alttext="P\iff Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">⇔</mo><mi>Q</mi></mrow></math> is logically equivalent to the statement <math id="S2.SS1.Thmtheorem5.p1.m6" class="ltx_Math" alttext="\neg P\iff\neg Q" display="inline"><mrow><mrow><mo rspace="0.167em">¬</mo><mi>P</mi></mrow><mo stretchy="false">⇔</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></math>.</p>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
@@ -145,6 +154,7 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS1.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.7.</h3>
