--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -94,13 +94,46 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
-<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into one of <b>DeMorgan's Laws (I)</b>: <math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi></mrow><mo>∨</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mo rspace="0.167em">¬</mo><mi>P</mi><mo>∧</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow>.</mo></mrow></math></p>
-<p class="ltx_p">In heuristic language, this means that distributing a negation through a compound statement results in flipping any logical connectors like ∨ or ∧.
+<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into one of <b>DeMorgan's Laws (I)</b>: <math display="block" class="ltx_math" style="display:block math;">
+  <mrow>
+    <mo form="prefix" stretchy="false">¬</mo>
+    <mo form="prefix" stretchy="false">(</mo>
+    <mi>P</mi>
+    <mo>∨</mo>
+    <mi>Q</mi>
+    <mo form="postfix" stretchy="false">)</mo>
+    <mspace width="0.2778em"></mspace>
+    <mo stretchy="false">⟺</mo>
+    <mspace width="0.2778em"></mspace>
+    <mo form="prefix" stretchy="false">¬</mo>
+    <mi>P</mi>
+    <mo>∧</mo>
+    <mo form="prefix" stretchy="false">¬</mo>
+    <mi>Q</mi>
+  </mrow>
+</math></p>
 <div id="S2.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.4.</h3>
 <div id="S2.SS1.Thmtheorem4.p1" class="ltx_para">
-<p class="ltx_p">Write a truth table proving <b>DeMorgan's Laws (II)</b>:<math id="S1.Ex1.m1" class="ltx_Math" alttext="(P\wedge Q)\Rightarrow R." display="block"><mrow><mrow><mo rspace="0.167em">¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi></mrow><mo>∧</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">⇔<mo rspace="0.167em">¬</mo><mi>P</mi><mo>∨</mo><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow>.</mo></mrow></math></p>
+<p class="ltx_p">Write a truth table proving <b>DeMorgan's Laws (II)</b>:<math display="block" class="tml-display" style="display:block math;">
+  <mrow>
+    <mo form="prefix" stretchy="false">¬</mo>
+    <mo form="prefix" stretchy="false">(</mo>
+    <mi>P</mi>
+    <mo>∧</mo>
+    <mi>Q</mi>
+    <mo form="postfix" stretchy="false">)</mo>
+    <mspace width="0.2778em"></mspace>
+    <mo stretchy="false">⟺</mo>
+    <mspace width="0.2778em"></mspace>
+    <mo form="prefix" stretchy="false">¬</mo>
+    <mi>P</mi>
+    <mo>∨</mo>
+    <mo form="prefix" stretchy="false">¬</mo>
+    <mi>Q</mi>
+  </mrow>
+</math></p>
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
