--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -94,7 +94,7 @@
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </div>
-<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into one of <b>DeMorgan's Laws (I)</b>: <math display="block" class="ltx_math" style="display:block math;">
+<p class="ltx_p">On the previous page we reasoned that the negation of "P <i>OR</i> Q" is "not P <i>AND</i> not Q". We codify this into one of <b>DeMorgan's Laws (I)</b>: <math display="block" class="ltx_Math" style="display:block math;">
   <mrow>
     <mo form="prefix" stretchy="false">¬</mo>
     <mo form="prefix" stretchy="false">(</mo>
@@ -116,7 +116,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.4.</h3>
 <div id="S2.SS1.Thmtheorem4.p1" class="ltx_para">
-<p class="ltx_p">Write a truth table proving <b>DeMorgan's Laws (II)</b>:<math display="block" class="tml-display" style="display:block math;">
+<p class="ltx_p">Write a truth table proving <b>DeMorgan's Laws (II)</b>:<math display="block" class="ltx_Math" style="display:block math;">
   <mrow>
     <mo form="prefix" stretchy="false">¬</mo>
     <mo form="prefix" stretchy="false">(</mo>
