--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -112,6 +112,7 @@
     <mi>Q</mi>
   </mrow>
 </math></p>
+<p>In heuristic language, this means that distributing a negation through a compound statement results in flipping any logical connectors like ∨ or ∧.</p>
 <div id="S2.SS1.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.1.4.</h3>
