--- a/teaching/300/300notes/2-1.html
+++ b/teaching/300/300notes/2-1.html
@@ -136,7 +136,7 @@
   </mrow>
 </math></p>
 </div>
-  <div class="half-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
