--- a/teaching/300/300notes/2-2.html
+++ b/teaching/300/300notes/2-2.html
@@ -162,9 +162,63 @@
 <div id="S2.SS2.p6" class="ltx_para">
 <p class="ltx_p">We will not go through <span class="ltx_text ltx_font_italic">too</span> many examples of contradiction proof… in fact, <span class="ltx_text ltx_font_italic">most</span> proofs you may start as contradiction proofs are actually <span class="ltx_text ltx_font_italic">contrapositive</span> proofs in disguise (like the next example)!</p>
 </div>
+<div id="S2.SS2.p6" class="ltx_para">
+<p class="ltx_p">We need to give a few definitions before continuing.</p>
+<h3 class="ltx_title ltx_runin ltx_title_theorem">
+<span class="ltx_text" style="color:#0000CC;">  Definition </span>2.2.3.</h3>
+<div id="S0.SS2.Thmtheorem1.p1" class="ltx_para">
+<p class="ltx_p">We define a real number <math><mi>x</mi></math> to be <b>rational</b> if <math>
+  <mrow>
+    <mi>x</mi>
+    <mo>=</mo>
+    <mstyle displaystyle="true" scriptlevel="0">
+      <mfrac>
+        <mi>p</mi>
+        <mi>q</mi>
+      </mfrac>
+    </mstyle>
+  </mrow>
+</math> for <math>
+  <mrow>
+    <mi>p</mi>
+    <mo>∈</mo>
+    <mi>ℤ</mi>
+  </mrow>
+</math> and <math>
+  <mrow>
+    <mi>q</mi>
+    <mo>∈</mo>
+    <mi>ℕ</mi>
+  </mrow>
+</math>. A real number <math><mi>x</mi></math> is <b>irrational</b> if it is not rational; i.e., it cannot be written in the form<math>
+  <mrow>
+    <mi>x</mi>
+    <mo>=</mo>
+    <mstyle displaystyle="true" scriptlevel="0">
+      <mfrac>
+        <mi>p</mi>
+        <mi>q</mi>
+      </mfrac>
+    </mstyle>
+  </mrow>
+</math> for <math>
+  <mrow>
+    <mi>p</mi>
+    <mo>∈</mo>
+    <mi>ℤ</mi>
+  </mrow>
+</math> and <math>
+  <mrow>
+    <mi>q</mi>
+    <mo>∈</mo>
+    <mi>ℕ</mi>
+  </mrow>
+</math>.</p>
+</div>
+</div>
 <div id="S2.SS2.Thmtheorem3" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.2.3.</h3>
+<span class="ltx_text" style="color:#800000;">  Example </span>2.2.4.</h3>
 <div id="S2.SS2.Thmtheorem3.p1" class="ltx_para">
 <p class="ltx_p">Prove or disprove: if <math id="S2.SS2.Thmtheorem3.p1.m1" class="ltx_Math" alttext="x+y" display="inline"><mrow><mi>x</mi><mo>+</mo><mi>y</mi></mrow></math> is irrational, then <math id="S2.SS2.Thmtheorem3.p1.m2" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> is irrational or <math id="S2.SS2.Thmtheorem3.p1.m3" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math> is irrational.</p>
 </div>
@@ -173,7 +227,7 @@
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS2.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.2.4.</h3>
+<span class="ltx_text" style="color:#800000;">  Example </span>2.2.5.</h3>
 <div id="S2.SS2.Thmtheorem4.p1" class="ltx_para">
 <p class="ltx_p">Prove or disprove: <math id="S2.SS2.Thmtheorem4.p1.m1" class="ltx_Math" alttext="\log_{2}(3)" display="inline"><mrow><msub><mi>log</mi><mn>2</mn></msub><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo></mrow></mrow></math> is an irrational number.</p>
 </div>
