--- a/teaching/300/300notes/2-2.html
+++ b/teaching/300/300notes/2-2.html
@@ -225,6 +225,7 @@
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS2.Thmtheorem4" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.2.5.</h3>
