--- a/teaching/300/300notes/2-3.html
+++ b/teaching/300/300notes/2-3.html
@@ -154,13 +154,16 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.3.4.</h3>
 <div id="S2.SS3.Thmtheorem4.p1" class="ltx_para">
-<p class="ltx_p">Prove that <math id="S2.SS3.Thmtheorem4.p1.m1" class="ltx_Math" alttext="\sqrt{5}" display="inline"><msqrt><mn>5</mn></msqrt></math> is irrational.</p>
+<p class="ltx_p">Prove that <math id="S2.SS3.Thmtheorem4.p1.m1" class="ltx_Math" alttext="\sqrt{3}" display="inline"><msqrt><mn>3</mn></msqrt></math> is irrational.</p>
 </div>
 </div>
   <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS3.SSS1.p12" class="ltx_para">
+<p class="ltx_p">(More space for Example 2.3.4.)</p>
+  <div class="half-answer-space" aria-hidden="true"></div>
+  <span class="sr-only">Blank space for you to write your work.</span>
 <p class="ltx_p">This proof tells us something quite important: most statements worth proving in mathematics take a lot of thought to prove. What’s more, proving even slightly different statements can result in widely differing proof techniques! This is where we tell you the truth about mathematics:</p>
 <blockquote class="ltx_quote">
 <p class="ltx_p">There is no one right answer for how to do mathematics.</p>
@@ -173,7 +176,7 @@
 <p class="ltx_p">Interpret this statement in your own words.</p>
 </div>
 </div>
-  <div class="large-answer-space" aria-hidden="true"></div>
+  <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div class="ltx_pagination ltx_role_newpage"></div>
 </section>
@@ -183,13 +186,38 @@
 </h2>
 
 <div id="S2.SS3.SSS2.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">Now that we have shown that primes are the building blocks of the positive integers, it would be a good idea to figure out how many primes there are. Certainly there are infinitely many numbers, right? So are there infinitely many <span class="ltx_text ltx_font_italic">prime</span> numbers? We begin with a thought experiment.</p>
+<p class="ltx_p">Now that we have shown that primes are the building blocks of the positive integers, it would be a good idea to figure out how many primes there are. Certainly there are infinitely many numbers, right? So are there infinitely many <span class="ltx_text ltx_font_italic">prime</span> numbers?</p>
+<p class="ltx_p">We begin with a thought experiment. Recall that <math><mi>a</mi></math> is a <b>factor</b> of <math><mi>n</mi></math> if <math><mi>a</mi></math> divides <math><mi>n</mi></math>. Also recall that a number <math>
+  <mrow>
+    <mi>n</mi>
+    <mo>∈</mo>
+    <mi>ℕ</mi>
+  </mrow>
+</math> is <b>prime</b> if <math>
+  <mrow>
+    <mi>n</mi>
+    <mo>≥</mo>
+    <mn>2</mn>
+  </mrow>
+</math> and its only factors are 1 and itself. Finally, a number<math>
+  <mrow>
+    <mi>n</mi>
+    <mo>∈</mo>
+    <mi>ℕ</mi>
+  </mrow>
+</math> is <b>composite</b> if <math>
+  <mrow>
+    <mi>n</mi>
+    <mo>≥</mo>
+    <mn>2</mn>
+  </mrow>
+</math> and not prime. (The number 1 is neither prime nor composite.)</p>
 </div>
 <div id="S2.SS3.Thmtheorem6" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.3.6.</h3>
 <div id="S2.SS3.Thmtheorem6.p1" class="ltx_para">
-<p class="ltx_p">We say that a number <math id="S2.SS3.Thmtheorem6.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> has a <span class="ltx_text ltx_font_bold">prime factorization</span> if <math id="S2.SS3.Thmtheorem6.p1.m2" class="ltx_Math" alttext="n=p_{1}p_{2}\cdot\cdots\cdot p_{n}" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><msub><mi>p</mi><mn>2</mn></msub></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi mathvariant="normal">⋯</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></mrow></math> for prime numbers <math id="S2.SS3.Thmtheorem6.p1.m3" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math> where these prime numbers can repeat. What natural numbers (other than 1) do <span class="ltx_text ltx_font_italic">not</span> have a prime factorization? Explain.</p>
+<p class="ltx_p">We say that a number <math id="S2.SS3.Thmtheorem6.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> has a <span class="ltx_text ltx_font_bold">prime factorization</span> if <math id="S2.SS3.Thmtheorem6.p1.m2" class="ltx_Math" alttext="n=p_{1}p_{2}\cdot\cdots\cdot p_{n}" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><msub><mi>p</mi><mn>2</mn></msub></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi mathvariant="normal">⋯</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></mrow></math> for prime numbers <math id="S2.SS3.Thmtheorem6.p1.m3" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math> where these prime numbers can repeat. What natural numbers (other than 1) do <span class="ltx_text ltx_font_italic">not</span> have a prime factorization?</p>
 </div>
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
@@ -198,7 +226,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.3.7.</h3>
 <div id="S2.SS3.Thmtheorem7.p1" class="ltx_para">
-<p class="ltx_p">We say that a number <math id="S2.SS3.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> has a <span class="ltx_text ltx_font_bold">primitive prime factorization</span> (my definition, but it does relate to the definition of “primitive”) if <math id="S2.SS3.Thmtheorem7.p1.m2" class="ltx_Math" alttext="n=p_{1}p_{2}\cdot\cdots\cdot p_{n}" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><msub><mi>p</mi><mn>2</mn></msub></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi mathvariant="normal">⋯</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></mrow></math> for prime number <math id="S2.SS3.Thmtheorem7.p1.m3" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math> <span class="ltx_text ltx_font_italic">which do not repeat</span>. What is the largest number that has a primitive prime factorization? Explain.</p>
+<p class="ltx_p">We say that a number <math id="S2.SS3.Thmtheorem7.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> has a <span class="ltx_text ltx_font_bold">primitive prime factorization</span> if <math id="S2.SS3.Thmtheorem7.p1.m2" class="ltx_Math" alttext="n=p_{1}p_{2}\cdot\cdots\cdot p_{n}" display="inline"><mrow><mi>n</mi><mo>=</mo><mrow><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>⁢</mo><msub><mi>p</mi><mn>2</mn></msub></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi mathvariant="normal">⋯</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></mrow></math> for prime numbers <math id="S2.SS3.Thmtheorem7.p1.m3" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math> <span class="ltx_text ltx_font_italic">which do not repeat</span>. What is the largest number that <b><i>has</i></b> a primitive prime factorization? Explain.</p>
 </div>
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
@@ -216,19 +244,20 @@
 <p class="ltx_p">This claim that there are infinitely many prime numbers was proven about 2000 years ago by Euclid, whose texts on geometry established the criteria for rigorous proof that we still use today. Let us investigate proving this by contradiction, similar to what we did in the proof of <math id="S2.SS3.SSS2.p2.m1" class="ltx_Math" alttext="\sqrt{2}" display="inline"><msqrt><mn>2</mn></msqrt></math> being irrational.</p>
 </div>
 <div id="S2.SS3.SSS2.p3" class="ltx_para ltx_noindent">
-<p class="ltx_p">You might be noticing a pattern here… if we are showing something is <span class="ltx_text ltx_font_italic">ir</span>rational (meaning not rational) or <span class="ltx_text ltx_font_italic">in</span>finite (meaning not finite), it is typically better to use a contradiction proof! We have a much better understanding of rational and finite things than we do of things that are <span class="ltx_text ltx_font_italic">not</span>.</p>
+<p class="ltx_p">You might be noticing a pattern here… if we are showing something is <span class="ltx_text ltx_font_italic">ir</span>rational (meaning not rational) or <span class="ltx_text ltx_font_italic">in</span>finite (meaning not finite), it is typically better to use a contradiction proof! We have a much better understanding of rational and finite things than we do of things that are <span class="ltx_text ltx_font_italic">not</span> rational or <span class="ltx_text ltx_font_italic">not</span> finite.</p>
 </div>
 <div id="S2.SS3.Thmtheorem9" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.3.9.</h3>
 <div id="S2.SS3.Thmtheorem9.p1" class="ltx_para">
-<p class="ltx_p">For the rest of this section, assume that there are only <span class="ltx_text ltx_font_italic">finitely many</span> primes. We don’t know how many primes that would be, so let’s call it <math id="S2.SS3.Thmtheorem9.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> primes for some natural number <math id="S2.SS3.Thmtheorem9.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. If there were infinitely many primes, we would not be able to choose this <math id="S2.SS3.Thmtheorem9.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. Explain why.</p>
+<p class="ltx_p">For the rest of this section, assume that there are only <span class="ltx_text ltx_font_italic">finitely many</span> primes. We don’t know how many primes that would be, so say there are <math id="S2.SS3.Thmtheorem9.p1.m1" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math> primes for some natural number <math id="S2.SS3.Thmtheorem9.p1.m2" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. If there were infinitely many primes, we would not be able to choose this <math id="S2.SS3.Thmtheorem9.p1.m3" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>. Explain why.</p>
 </div>
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS3.Thmtheorem10" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
+<div class="ltx_pagination ltx_role_newpage"></div>
 <span class="ltx_text" style="color:#800000;">  Example </span>2.3.10.</h3>
 <div id="S2.SS3.Thmtheorem10.p1" class="ltx_para">
 <p class="ltx_p">We also don’t know what all the primes would be (save for a few). Let’s call them <math id="S2.SS3.Thmtheorem10.p1.m1" class="ltx_Math" alttext="p_{1},p_{2},\dots,p_{n}" display="inline"><mrow><msub><mi>p</mi><mn>1</mn></msub><mo>,</mo><msub><mi>p</mi><mn>2</mn></msub><mo>,</mo><mi mathvariant="normal">…</mi><mo>,</mo><msub><mi>p</mi><mi>n</mi></msub></mrow></math>, then. Given our supposition, what is the <span class="ltx_text ltx_font_italic">largest</span> number with a primitive prime factorization?</p>
@@ -236,12 +265,11 @@
 </div>
   <div class="tiny-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS3.Thmtheorem11" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.3.11.</h3>
 <div id="S2.SS3.Thmtheorem11.p1" class="ltx_para">
-<p class="ltx_p">Investigate whether the number</p>
+<p class="ltx_p">Continuing our assumptions from before, investigate whether the number</p>
 <table id="S2.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
@@ -255,6 +283,7 @@
 </div>
   <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS3.Thmtheorem12" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.3.12.</h3>
