--- a/teaching/300/300notes/2-4.html
+++ b/teaching/300/300notes/2-4.html
@@ -112,7 +112,7 @@
 <li id="S2.I3.ix1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(a)</span> 
 <div id="S2.I3.ix1.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">There exists a real number <math id="S2.I3.ix1.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> such that, if <math id="S2.I3.ix1.p1.m2" class="ltx_Math" alttext="x&gt;0" display="inline"><mrow><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow></math>, then <math id="S2.I3.ix1.p1.m3" class="ltx_Math" alttext="x^{2}&gt;0" display="inline"><mrow><msup><mi>x</mi><mn>2</mn></msup><mo>&gt;</mo><mn>0</mn></mrow></math>.</p>
+<p class="ltx_p">There exists a positive real number <math id="S2.I3.ix1.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> such that, if <math id="S2.I3.ix1.p1.m2" class="ltx_Math" alttext="x&gt;0" display="inline"><mrow><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow></math>, then <math id="S2.I3.ix1.p1.m3" class="ltx_Math" alttext="x^{2}&gt;0" display="inline"><mrow><msup><mi>x</mi><mn>2</mn></msup><mo>&gt;</mo><mn>0</mn></mrow></math>.</p>
 </div>
   <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
@@ -128,7 +128,7 @@
 <li id="S2.I3.ix3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(c)</span> 
 <div id="S2.I3.ix3.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">There exists a natural <math id="S2.I3.ix3.p1.m1" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math> such that <math id="S2.I3.ix3.p1.m2" class="ltx_Math" alttext="n+1&gt;3" display="inline"><mrow><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><mo>&gt;</mo><mn>3</mn></mrow></math>.</p>
+<p class="ltx_p">There exists an <math id="S2.I3.ix3.p1.m1" class="ltx_Math" alttext="n\in\mathbb{N}" display="inline"><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></math> such that <math id="S2.I3.ix3.p1.m2" class="ltx_Math" alttext="n+1&gt;3" display="inline"><mrow><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><mo>&gt;</mo><mn>3</mn></mrow></math>.</p>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
@@ -141,10 +141,26 @@
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <li id="S2.I3.ix5" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(e)</span> 
 <div id="S2.I3.ix5.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p">For a real number <math id="S2.I3.ix5.p1.m1" class="ltx_Math" alttext="x\in\mathbb{R}" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi>ℝ</mi></mrow></math>, <math id="S2.I3.ix5.p1.m2" class="ltx_Math" alttext="x^{2}&gt;4" display="inline"><mrow><msup><mi>x</mi><mn>2</mn></msup><mo>&gt;</mo><mn>4</mn></mrow></math>.</p>
+<p class="ltx_p">There exists a real number <math><mi>x</mi></math> such that <math>
+  <mrow>
+    <mi>x</mi>
+    <mo>&gt;</mo>
+    <mn>0</mn>
+  </mrow>
+</math> and <math>
+  <mrow>
+    <msup>
+      <mi>x</mi>
+      <mn class="tml-sml-pad">2</mn>
+    </msup>
+    <mo>≤</mo>
+    <mn>0</mn>
+  </mrow>
+</math>.</p>
 </div>
   <div class="answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
@@ -152,7 +168,13 @@
 </ol>
 </div>
 </div>
-<div class="ltx_pagination ltx_role_newpage"></div>
+<p class="ltx_p">We recap what we have learned below:</p>
+<ol>
+  <li class="ltx_item" style="list-style-type:none;">To prove a "for all" statement, we must show a statement is true in general, not specifically for a certain value.</li>
+  <li class="ltx_item" style="list-style-type:none;">To disprove a "for all" statement, we must show a <b><i>counterexample</i></b> of our choosing, but we must verify that our counterexample indeed disproves the statement.</li>
+  <li class="ltx_item" style="list-style-type:none;">To prove a "there exists" statement, we must show an <b><i>example</i></b> of this object existing, then verify that this example works.</li>
+  <li class="ltx_item" style="list-style-type:none;">To disprove a "there exists" statement, we must show that "for all" relevant objects the statement does not hold true.</li>
+</ol>
 </section>
 <section id="S2.SS4.SSS2" class="ltx_subsubsection">
 <h2 class="ltx_title ltx_title_subsubsection">
@@ -173,31 +195,32 @@
 <div id="S2.I4.ix1.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S2.I4.ix1.p1.m1" class="ltx_Math" alttext="(\forall x\in\mathbb{Z})(\forall y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S2.I4.ix2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(b)</span> 
 <div id="S2.I4.ix2.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p"><math id="S2.I4.ix2.p1.m1" class="ltx_Math" alttext="(\forall x\in\mathbb{Z})(\exists y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math></p>
+<p class="ltx_p"><math id="S2.I4.ix4.p1.m1" class="ltx_Math" alttext="(\exists x\in\mathbb{Z})(\exists y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
+<div class="ltx_pagination ltx_role_newpage"></div>
 <li id="S2.I4.ix3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(c)</span> 
 <div id="S2.I4.ix3.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p"><math id="S2.I4.ix3.p1.m1" class="ltx_Math" alttext="(\exists x\in\mathbb{Z})(\forall y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 <li id="S2.I4.ix4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(d)</span> 
 <div id="S2.I4.ix4.p1" class="ltx_para ltx_noindent">
-<p class="ltx_p"><math id="S2.I4.ix4.p1.m1" class="ltx_Math" alttext="(\exists x\in\mathbb{Z})(\exists y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math></p>
+<p class="ltx_p"><math id="S2.I4.ix2.p1.m1" class="ltx_Math" alttext="(\forall x\in\mathbb{Z})(\exists y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math></p>
 </div>
-  <div class="answer-space" aria-hidden="true"></div>
+  <div class="half-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </li>
 </ol>
@@ -209,26 +232,6 @@
 <h2 class="ltx_title ltx_title_subsubsection">
 <span class="ltx_tag ltx_tag_subsubsection">2.4.3 </span><span class="ltx_text" style="color:#800000;">A “Contrapositive” for Quantifiers</span>
 </h2>
-
-<div id="S2.SS4.Thmtheorem6" class="ltx_theorem ltx_theorem_example">
-<h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.4.6.</h3>
-<div id="S2.SS4.Thmtheorem6.p1" class="ltx_para">
-<p class="ltx_p">Consider what you would have to show to <span class="ltx_text ltx_font_italic">disprove</span> the statement: <math id="S2.SS4.Thmtheorem6.p1.m1" class="ltx_Math" alttext="(\forall x\in\mathbb{Z})(\forall y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math>. Write down your idea of a proof below.</p>
-</div>
-</div>
-  <div class="half-answer-space" aria-hidden="true"></div>
-  <span class="sr-only">Blank space for you to write your work.</span>
-<div id="S2.SS4.Thmtheorem7" class="ltx_theorem ltx_theorem_example">
-<h3 class="ltx_title ltx_runin ltx_title_theorem">
-<span class="ltx_text" style="color:#800000;">  Example </span>2.4.7.</h3>
-<div id="S2.SS4.Thmtheorem7.p1" class="ltx_para">
-<p class="ltx_p">Consider what you would have to show to <span class="ltx_text ltx_font_italic">disprove</span> the statement: <math id="S2.SS4.Thmtheorem7.p1.m1" class="ltx_Math" alttext="(\exists x\in\mathbb{Z})(\forall y\in\mathbb{Z})x+y=0" display="inline"><mrow><mrow><mrow><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∃</mo><mi>x</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mrow><mrow><mo rspace="0.167em">∀</mo><mi>y</mi></mrow><mo>∈</mo><mi>ℤ</mi></mrow><mo stretchy="false">)</mo></mrow><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mi>y</mi></mrow><mo>=</mo><mn>0</mn></mrow></math>. Write down your idea of a proof below.</p>
-</div>
-</div>
-  <div class="half-answer-space" aria-hidden="true"></div>
-  <span class="sr-only">Blank space for you to write your work.</span>
-<div class="ltx_pagination ltx_role_newpage"></div>
 <div id="S2.SS4.SSS3.p1" class="ltx_para ltx_noindent">
 <p class="ltx_p">Consider the following scenario:</p>
 <blockquote class="ltx_quote">
@@ -236,7 +239,7 @@
 </blockquote>
 <p class="ltx_p">What would have to happen for the coach to be justified in <span class="ltx_text ltx_font_italic">not</span> buying them pizza?</p>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS4.SSS3.p2" class="ltx_para ltx_noindent">
 <p class="ltx_p">Now consider the following scenario:</p>
@@ -245,7 +248,7 @@
 </blockquote>
 <p class="ltx_p">What would have to happen for the coach to be justified in <span class="ltx_text ltx_font_italic">not</span> buying them pizza?</p>
 </div>
-  <div class="tiny-answer-space" aria-hidden="true"></div>
+  <div class="small-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS4.SSS3.p3" class="ltx_para ltx_noindent">
 <p class="ltx_p">In each of these examples we are negating a “for all” or “there exists” statements. If <math id="S2.SS4.SSS3.p3.m1" class="ltx_Math" alttext="P(x)" display="inline"><mrow><mi>P</mi><mo>⁢</mo><mrow><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo></mrow></mrow></math> is the antecedent statement “player <math id="S2.SS4.SSS3.p3.m2" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> runs a mile” and <math id="S2.SS4.SSS3.p3.m3" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is the consequence statement “the coach buys the players pizza”, the first logical statement could be written as</p>
@@ -291,7 +294,7 @@
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.4.9.</h3>
 <div id="S2.SS4.Thmtheorem9.p1" class="ltx_para">
-<p class="ltx_p">Negate the following propositions, remembering not to use logical notation in your answers. These are called forming “<span class="ltx_text ltx_font_bold">useful denials</span>” of these propositions.</p>
+<p class="ltx_p">Negate the following propositions, remembering not to use logical notation in your answers. These are called forming “<span class="ltx_text ltx_font_bold">useful denials</span>” of these propositions. (Note: we are not proving or disproving these statements; we are just negating them!)</p>
 <ol id="S2.I6" class="ltx_enumerate">
 <li id="S2.I6.ix1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(a)</span> 
@@ -328,6 +331,7 @@
 </h2>
 
 <div id="S2.SS4.Thmtheorem10" class="ltx_theorem ltx_theorem_example">
+<p>In formal proofs you will not see mathematicians use abbreviations like <math><mi>∀</mi></math> and <math><mi>∃</mi></math>, if for no other reason that it makes the proof harder to read. For the very same reason, you will see us label some parts of our proofs as "scratch work". These are considered parts of the problem to help us understand the statement, and they are typically never included in proofs.</p>
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
 <span class="ltx_text" style="color:#800000;">  Example </span>2.4.10.</h3>
 <div id="S2.SS4.Thmtheorem10.p1" class="ltx_para">
@@ -342,7 +346,7 @@
 </table>
 </div>
 </div>
-  <div class="half-answer-space" aria-hidden="true"></div>
+  <div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 <div id="S2.SS4.Thmtheorem11" class="ltx_theorem ltx_theorem_example">
 <h3 class="ltx_title ltx_runin ltx_title_theorem">
@@ -360,7 +364,7 @@
 <p class="ltx_p">First, prove this statement. Then consider: if we switch the order of quantifiers, is the statement still true? Prove or disprove.</p>
 </div>
 </div>
-<div class="half-answer-space" aria-hidden="true"></div>
+<div class="large-answer-space" aria-hidden="true"></div>
   <span class="sr-only">Blank space for you to write your work.</span>
 </section>
 </section>
